# versionwatch

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  build-production.sh  config.yaml  docker-compose.yml  start-dev.sh  stop-server.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.sqlx/: query-077f2c77faaf9f13792c6b44402fa14fc94e0024b6aac2ca28afe4367c1d5594.json  query-396d06fec738f667cc9e6211f6e6d25894c200ec1305528401390c1e7fce0e6d.json  query-cd6ab9d77c556ab3b0377fdf539d067bc61c7cf7481f28a882089c5c717a354c.json
config/: base.yml
crates/versionwatch-cli/: Cargo.toml
crates/versionwatch-cli/src/: dashboard.rs  main.rs
crates/versionwatch-collect/: Cargo.toml
crates/versionwatch-collect/src/: apache.rs  caddy.rs  docker.rs  eclipse_temurin.rs  elixir.rs  github.rs  go.rs  java.rs  kong.rs  kotlin.rs  lib.rs  mongodb.rs  mysql.rs  nginx.rs  node.rs  perl.rs  php.rs  postgresql.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs
crates/versionwatch-config/: Cargo.toml
crates/versionwatch-config/src/: lib.rs
crates/versionwatch-core/: Cargo.toml
crates/versionwatch-core/src/domain/: mod.rs  product_cycle.rs  software_version.rs
crates/versionwatch-db/: Cargo.toml
crates/versionwatch-db/migrations/: 20250702100000_restructure_schema.sql
crates/versionwatch-db/src/: lib.rs
docs/: add_software_collector.md
frontend/: COMPONENTS.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/charts/: BarChart.tsx  DoughnutChart.tsx  LineChart.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Navigation.tsx  index.ts
frontend/src/components/ui/: Loading.tsx  MetricCard.tsx  Tooltip.tsx  index.ts
frontend/src/hooks/: index.ts  useDashboardData.ts  useTooltipStyles.ts
frontend/src/styles/: common.ts
frontend/src/types/: index.ts
frontend/src/views/: Analytics.tsx  Collectors.tsx  Logs.tsx  Overview.tsx  index.ts
migrations/: 20250701070644_create_software_versions_table.sql
scripts/: install-hooks.sh  pre-commit.sh
