[package]
name = "versionwatch-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
versionwatch-config = { path = "../versionwatch-config" }
versionwatch-collect = { path = "../versionwatch-collect" }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Dashboard dependencies
csv = "1.3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tower-serve-static = "0.1"
