[package]
name = "versionwatch-collect"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
polars = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
rss = { workspace = true }
scraper = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
versionwatch-config = { path = "../versionwatch-config" }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
httpmock = { workspace = true }
